--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,11 @@
-buildscript {
-  repositories {
-    mavenCentral()
-  }
-  dependencies {
-    classpath 'org.springframework.boot:spring-boot-gradle-plugin:1.2.5.RELEASE'
-  }
+plugins {
+  id 'org.springframework.boot' version '2.1.7.RELEASE'
 }
 
 apply plugin: 'java'
-apply plugin: 'eclipse'
-apply plugin: 'spring-boot'
+apply plugin: 'io.spring.dependency-management'
 
-jar {
-  baseName = 'GitHubNotifier'
-  version =  '0.9'
-}
+version = '0.9'
 
 repositories {
   mavenCentral()
@@ -26,7 +17,6 @@ dependencies {
   compile 'com.github.mfornos:humanize-slim:1.2.2'
   compile 'org.eclipse.mylyn.github:org.eclipse.egit.github.core:2.1.5'
   compile 'org.springframework.boot:spring-boot-starter-data-jpa'
-  compile 'org.springframework.boot:spring-boot-starter-velocity'
   compile 'org.springframework.boot:spring-boot-starter-web'
 
   runtime 'com.h2database:h2'
