--- a/build.gradle
+++ b/build.gradle
@@ -24,3 +24,7 @@ dependencies {
   runtime 'org.flywaydb:flyway-core'
   runtime 'org.hibernate.javax.persistence:hibernate-jpa-2.1-api:1.0.0.Final'
 }
+
+tasks.withType(JavaCompile) {
+  options.compilerArgs << "-Xlint:all" << "-Werror"
+}
