More clean-up after resuscitate

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,4 +1,4 @@
-liquibase.change-log: classpath:/db/migrations-master.xml
+spring.liquibase.change-log: classpath:/db/migrations-master.xml
 
 spring:
   datasource:
